export type Aidat = {
    base: number;
    jeune: number;
    retraite: number;
};

export const aidat: Aidat = {
    base: 240,
    jeune: 100,
    retraite: 100,
};